@@ -6,10 +6,19 @@ Makefile.in
 /autom4te.cache/
 /config.*
 /configure
-/ebusd
 /ebusd*.tar.*
 /stamp-h?
 .deps/
 *.o
 *.dirstamp
-/ebusctl
+/src/libcore/libcore.a
+/src/libebus/libebus.a
+/src/ebusd/ebusd
+/src/tools/ebusctl
+/src/test/test_bus
+/src/test/test_port
+/src/test/test_configfile
+/src/test/test_commands
+/src/test/test_decode
+/src/test/test_encode
+/src/test/test_symbol
